--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
-TBA
+<meta charset="UTF-8">
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>Shakespeare Sonnet</title>
+    <link href="https://fonts.cdnfonts.com/css/computer-modern" rel="stylesheet">
+    <script crossorigin src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #fafafa;
+            font-family: 'Computer Modern', serif;
+            line-height: 1.6;
+            padding: 2em;
+            box-sizing: border-box;
+            color: #333;
+        }
+
+        h1 {
+            font-size: 2em;
+            text-align: center;
+            margin-bottom: 1em;
+        }
+
+        p {
+            text-align: justify;
+            transition: background-color 0.2s;
+        }
+
+        p.highlighted {
+            background-color: #faf0e6;
+        }
+    </style>
+</head>
+
+<body>
+    <div id="root"></div>
+    <script src="bundle.js"></script>
+</body>
+
+</html>
